# Seaport

./: .gitignore  README.md  diagram.puml  package-lock.json  package.json
backend/: .clang-format  .clang-tidy  CMakeLists.txt
backend/include/: api.hpp  config.hpp  port.hpp
backend/src/: api.cpp  main.cpp  port.cpp
electron/: main.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: portApi.ts
frontend/src/components/: ConfigEditor.tsx  PortSimulation.tsx  ShipScheduleTable.tsx
